--- a/index.html
+++ b/index.html
@@ -4,69 +4,77 @@
   <meta charset="UTF-8">
   <title>SHOPCADE</title>
    <link rel="stylesheet" type="text/css" href="style.css">
+   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 </head>
 <body>
   <header>
-    <div id="logo">SHOPCADE</div>
-    <div id="basket">flag | trolley</div>
-    <div id="login">REGISTER | LOGIN</div>
+    <div id="logo"><img src="images/logo.png" height="74" width="246"></div>
+    <div id="header-actions">
+      <div id="basket"><img src="images/unionjack.png" height="15" width="25"> | <img src="images/ic_cart-18dp.png" height="15" width="15"></div>
+      <div id="login">REGISTER | LOGIN</div>
+    </div>
   </header>
   <nav>
     <ul>
-      <li>Trending</li>
-      <li>Celebs</li>
-      <li>Fashion</li>
+      <li>TRENDING</li>
+      <li>|</li>
+      <li>CELEBS</li>
+      <li>|</li>
+      <li>FASHION</li>
     </ul>
     <input type="search">
   </nav>
-
   <div id="path">
     FASHION / WOMEN / DRESS / ANTHEA CUT OUT DRESS
   </div>
-  <div id="pics">
-    <div id="thumbs"></div>
-    <div id="zoom"></div>
-  </div>
-  <div id="social">
-    Tags: #missguided #dress #pink #long #black #missguided #dress #pink #long #black 
-    <img src="" alt="">
-    <img src="" alt="">
-    <img src="" alt="">
-    <img src="" alt="">
-  </div>
-
-  <div id="info">
-    <div id="item-header">
-      <div id="garment">ANTHEA CUT OUT DRESS</div>
-      <div id="designer">by <span>Missguided</span></div>
-    </div>
-    <div id="price-rating">
-      <div id="price">36.00</div>
-      <div id="rating">4/5</div>
-    </div>
-    <div id="colours-sizes">
-      <div id="colours">
-        COLOUR:
+  <div id="content">
+    <div id="product-show">
+      <div id="pics">
+        <div id="thumbs"><img src="images/slideshow.png"></div>
+        <div id="zoom"><img src="images/zoom.png"></div>
       </div>
-      <div id="sizes">
-        SIZE:
+      <div id="tags">
+        Tags: #missguided #dress #pink #long #black #missguided #dress #pink #long #black </div>
+      <div id="social">
+        <i class="fa fa-facebook"></i>
+        <i class="fa fa-twitter"></i>
+        <i class="fa fa-pinterest-p"></i>
+        <i class="fa fa-google-plus"></i>
       </div>
     </div>
-    <div id="action-buttons">
-      <button id="basket">ADD TO CART</button>
-      <button id="like">I LIKE IT</button>
-      <span id="size-validation">*Please select a size</span>
-    </div>
-    <div id="description">
-      <span class="info-header">Description</span>
-      <p>Bringing a touch of pastel perfection to your wardrobe, this elegant nude floaty maxi is a fabulous choice for your big events this season. Perennially sexy and red carpet inspired, all this beautiful gown needs</p>
-      <p>Bringing a touch of pastel perfection to your wardrobe, this elegant nude floaty maxi is a fabulous choice for your big events this season. Perennially sexy and red carpet inspired, all this beautiful gown needs is a pair of your highest heels and plenty of red lipstick for a drop dead gorgeous look. Fully lined Approx length 157cm/62” (Based on a UK size 8 sample) 95% Polyester 5% Cotton</p>
-    </div>
-    <div id="delivery-returns">
-      <span class="info-header">Delivery & Returns</span>
-    </div>
-    <div id="activity">
-      <span class="info-header">Activity</span>
+    <div id="product-info">
+      <div id="item-header">
+        <div id="garment">ANTHEA CUT OUT DRESS</div>
+        <div id="designer">by <span>Missguided</span></div>
+      </div>
+      <div id="price-rating">
+        <div id="price">36.00</div>
+        <div id="rating">4/5</div>
+      </div>
+      <div id="colours-sizes">
+        <div id="colours">
+          COLOUR:
+        </div>
+        <div id="sizes">
+          SIZE:
+        </div>
+      </div>
+      <div id="action-buttons">
+        <button id="basket">ADD TO CART</button>
+        <button id="like">I LIKE IT</button>
+        <span id="size-validation">*Please select a size</span>
+      </div>
+      <div id="description">
+        <span class="info-header">Description</span>
+        <p>Bringing a touch of pastel perfection to your wardrobe, this elegant nude floaty maxi is a fabulous choice for your big events this season. Perennially sexy and red carpet inspired, all this beautiful gown needs</p>
+        <p>Bringing a touch of pastel perfection to your wardrobe, this elegant nude floaty maxi is a fabulous choice for your big events this season. Perennially sexy and red carpet inspired, all this beautiful gown needs is a pair of your highest heels and plenty of red lipstick for a drop dead gorgeous look. Fully lined Approx length 157cm/62” (Based on a UK size 8 sample) 95% Polyester 5% Cotton</p>
+      </div>
+      <div id="delivery-returns">
+        <span class="info-header">Delivery & Returns</span>
+      </div>
+      <div id="activity">
+        <span class="info-header">Activity</span>
+      </div>
     </div>
 
 
